# qml-workflow-editor

./: .gitignore  CMakeLists.txt  InputDataBlock.qml  Main.qml  OutputBlock.qml  SampleBlock.qml  SimpleRelation.qml  SimpleRelationHandle.qml  abstractrelation.cpp  block.cpp  block.h  main.cpp  relation.cpp  relation.h  relationhandle.h  relationtool.cpp  relationtool.h  selecttool.h  workfloweditorarea.cpp  workfloweditorarea.h
commands/: addblockcommand.cpp  addblockcommand.h
qml/: BlockBackground.qml  InputDataBlock.qml  Main.qml  OutputBlock.qml  SampleBlock.qml  SimpleRelation.qml  SimpleRelationHandle.qml
qml/blocks/: AbstractBlock.qml  AstraDBBlock.qml  ChatInputBlock.qml  ChatOutputBlock.qml  NoteBlock.qml  OpenAIEmbeddings.qml  ParseDataBlock.qml  PromptBlock.qml
res/: res.qrc
src/: block.cpp  block.h  relationtool.cpp  workfloweditorarea.cpp  workfloweditorarea.h
src/commands/: addblockcommand.cpp
